exports[`consistent-indexed-object-style > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 43
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 42
        }
      }
    },
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 20
        },
        "end": {
          "line": 1,
          "column": 42
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 2,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 2
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-indexed-object-style > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-indexed-object-style",
      "messageId": "preferRecord",
      "message": "A record is preferred over an index signature.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 12
        },
        "end": {
          "line": 1,
          "column": 34
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
